--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 streamlit==1.37.1
 crewai==0.51.1
-yfinance==0.2.43
+yfinance
 pandas==2.2.2
 numpy==1.26.4
 langchain_groq==0.1.9
+crewai-tools== 0.8.3
+Openai
